dist/core/src/test/baseman/invalid-usage/case-no-metadata-1/subcases.js
"use strict";
Object.defineProperty(exports, "__esModule", { value: true });
exports.default = [
    {
        name: 'help-long',
        args: ['--help'],
    },
    {
        name: 'no-argument',
        args: [],
    },
];
//# sourceMappingURL=subcases.js.map